--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
     <section>
       <h2>마지막 4자리 카드번호로 내 카드가 유출 되었는지 조회하세요</h2>
       <h4>
-        유출된 99999개 카드 번호 중, 유효기간이 20년12월 이후인 85330개의 카드를
-        조회 합니다.
+        <div>
+          <a
+            href="https://www.dailysecu.com/news/articleView.html?idxno=117898"
+            target="_blank"
+            rel="noopener noreferrer"
+            >[단독] 클롭 랜섬웨어 갱단, 훔친 카드정보 10만개 결국 공개
+            확인돼…금융기관 긴급 대응 필요</a
+          >
+        </div>
+        <div>
+          유출된 99999개 카드 번호 중, 유효기간이 20년12월 이후인 85330개의
+          카드를 조회 합니다.
+        </div>
       </h4>
       <input
         type="text"
@@ -19,7 +30,7 @@
       <button id="search">조회</button>
     </section>
     <section>
-      <h2 id="h3">유출카드 목록</h2>
+      <h2 id="h3">유출카드 목록 (최대 20개까지 표시)</h2>
       <ul id="container"></ul>
     </section>
   </body>
